--- a/css/style.css
+++ b/css/style.css
@@ -865,7 +865,7 @@ legend {
 .filtr__section {
    justify-content: center;
     align-items: center;
-   margin: 217px auto 70px;
+   margin: 217px auto 20px;
    max-width: 1050px;
    width: 98%;
     background: rgba(41, 20, 4, 0.71);
@@ -1039,7 +1039,7 @@ legend {
    color: yellow;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 920px) {
    .filter_buttons {
       display: flex;
       flex-direction: row-reverse;
@@ -1162,13 +1162,18 @@ input[type="number"]:focus {
    padding: 0px 0px 5px 0px;
 }
 
+.checkbox_pay {
+   margin: 0px 3px 0px 0px;
+}
+
+
 @media (max-width: 920px){
    .filtr-inner {
       flex-wrap: wrap;
    }
    
    .filtr__section {
-      margin: 183px auto 30px;
+      margin: 183px auto 20px;
       max-width: 700px;
       padding: 5px 0px;
    }
@@ -1179,7 +1184,7 @@ input[type="number"]:focus {
    }
    
    .checkbox_search {
-      flex: 1 0 70%;
+      flex: 1 0 90%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -1193,7 +1198,7 @@ input[type="number"]:focus {
 
 @media (max-width: 620px) {
    .filtr__section {
-      margin: 183px auto 30px;
+      margin: 183px auto 20px;
       max-width: 600px;
    }
    
@@ -1437,4 +1442,141 @@ f
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+
+/* Sections Headers Styles */
+
+
+.section_header {
+}
+
+.header_margin_top {
+   margin-top: 15px;
+}
+
+.section_header__container {
+}
+._container {
+}
+.section_header__main {
+   padding: 7px 5px;
+   border-top: 2px dotted #004da8;
+   border-bottom: 2px dotted #004da8;
+   display: flex;
+   margin-bottom: 10px;
+   justify-content: space-between;
+   align-items: center;
+}
+.section_header__left {
+    display: flex;
+   align-items: center;
+   
+}
+
+@media (max-width: 380px) {
+   .section_header__left {
+      flex-wrap: wrap;
+   }
+   
+   .estate_header__checkbox-body {
+      margin-top: 10px;
+      margin-left: 10px;
+   }
+}
+
+
+.section_header__title {
+   font-weight: 700;
+   font-size: 16px;
+   padding: 0px 10px;
+   color: #555555;
+}
+.section_header__subtitle {
+   font-weight: 700;
+   font-size: 16px;
+   background-color: #004da8;
+   color: white;
+   padding: 5px 15px;
+   border-radius: 7px;
+}
+.section_header__right {
+   display: flex;
+   align-items: center;
+}
+.section_header__more {
+   color: #004da8;
+   font-size: 16px;
+   font-weight: 500;
+   display: flex;
+   align-items: center;
+}
+
+.icon-vip_title {
+/*   fill: #ff5800;*/
+   fill: #ef0000;
+   width: 20px;
+   height: 20px;
+   margin: 0px 5px;
+   margin-bottom: -2px;
+}
+
+.icon-infr {
+   fill: #32d800;
+}
+
+.icon-infr1 {
+   fill: #01cfea;
+}
+
+.icon-infr2 {
+   fill: #9901ea;
+}
+
+.icon-infr3 {
+   fill: #d1a900;
+}
+
+
+.icon-infr4 {
+   fill: #00ebeb;
+}
+
+.icon-infr7 {
+   fill: #ff125b;
+}
+
+.icon-infr8 {
+   fill: #ff8900;
+}
+
+.icon-arrow-right11 {
+   width: 15px;
+   height: 15px;
+   margin-right: 2px;
+   margin-bottom: 0px;
+   fill: orangered;
+}
+
+@media (max-width: 530px) {
+   .section_header__title {
+      padding: 0px 0px;
+   }
+}
+
+@media (max-width: 430px) {
+   .section_header__title {
+      font-size: 14px;
+   }
+   
+   .section_header__subtitle {
+      font-size: 14px;
+   }
+   .section_header__more {
+      font-size: 14px;
+   }
+   .icon-vip_title1 {
+      width: 15px;
+   height: 15px;
+   }
 }
