--- a/css/style.css
+++ b/css/style.css
@@ -1580,3 +1580,344 @@ f
    height: 15px;
    }
 }
+
+/* Main_elan_part_elan styles */
+
+.homes__ads__main__inner,
+.cars__elan__main__inner{
+    display: flex;
+    flex-wrap: wrap;
+/*    justify-content: space-between;*/
+   margin-bottom: 20px;
+}
+
+.home__item {
+    width: 25%;
+   position: relative;
+}
+
+@media (max-width: 991px) {
+   .home__item {
+    width: 33.333%;
+}
+}
+
+@media (max-width: 767px) {
+   .home__item {
+    width: 50%;
+}
+}
+
+
+
+.board {
+    display: block;
+    margin: 5px 5px;
+    border: 1px solid #e8e7e7;
+/*    position: relative;*/
+   border-radius: 10px;
+   overflow: hidden;
+   box-shadow: 0 17px 34px 0 rgb(44 39 56 / 4%), 0 8px 17px 0 rgb(44 39 56 / 2%);
+}
+
+.board:hover {
+   box-shadow: 0 4px 8px 0 rgb(177 181 199 / 48%);
+}
+
+@media (max-width: 530px) {
+   .home__item {
+    width: 50%;
+}
+   .board {
+      margin: 5px;
+   }
+   
+   .homes__ads__main__inner,
+   .cars__elan__main__inner {
+      margin: 0px -5px 20px;
+   }
+}
+
+@media (max-width: 400px) {
+   
+}
+
+.home_picture_design {
+    position: relative;
+    padding: 0 0 67% 0;
+/*    text-align: center;*/
+/*    height: 180px;*/
+    overflow: hidden;
+
+}
+
+.home_photo {
+/*    display: block;*/
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+/*    max-width: 100%;*/
+/*    height: auto;*/
+
+
+/*    margin: 10px; 15px;*/
+/*    padding: 5px 10px;*/
+}
+
+.home_photo_text {
+    position: absolute;
+    right: 0px;
+    top: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: 500;
+    padding: 3px 7px;
+    background-color: rgba(255, 54, 0, 0.82);
+/*   background-color: red;*/
+   border-radius: 5px 0px 0px 5px;
+}
+
+.home_photo_text_owner {
+   position: absolute;
+    left: 0px;
+    bottom: 25px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: 500;
+    padding: 3px 5px;
+    background-color: #1c6700;
+}
+
+.price__currency {
+   margin-left: 4px;
+}
+
+.home_photo_text_agent {
+   position: absolute;
+    left: 0px;
+    bottom: 25px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: 400;
+    padding: 3px 5px;
+/*    background-color: #d89e00;*/
+    background-color: #017dc0;
+   border-radius: 0px 5px 5px 0px;
+}
+
+.content_type__icons {
+   display: flex;
+   position: absolute;
+   right: 3px;
+   bottom: 5px;
+}
+
+.premium__icon_content {
+    display: block;
+    fill: #ff9c82;
+    width: 22px;
+    height: 22px;
+    padding: 3px 3px;
+    background-color: rgba(1, 70, 86, 0.86);
+margin-left: 2px;
+   border-radius: 5px;
+}
+
+.vip__icon_content {
+    display: block;
+   
+    fill: #ffd102;
+    width: 22px;
+    height: 22px;
+    padding: 3px 3px;
+    background-color: rgba(1, 70, 86, 0.86);
+   margin-left: 2px;
+   border-radius: 5px;
+}
+
+.home_extra__icons {
+   display: flex;
+   position: absolute;
+   right: 0px;
+   top: 33px;
+}
+
+.document__icon_content {
+    display: block;
+    fill: white;
+    width: 22px;
+    height: 22px;
+    padding: 4px 4px;
+    background-color: #9aba95;
+   margin-left: 2px;
+   border-radius: 5px;
+}
+
+
+
+.percent__icon_content {
+    display: block;
+    fill: white;
+    width: 22px;
+    height: 22px;  
+    padding: 4px 4px;
+    background-color: #F7941E;
+   margin-left: 2px;
+   border-radius: 5px;
+}
+
+.heart__icon_content {
+    display: block;
+    position: absolute;
+    fill: white;
+    width: 26px;
+    height: 26px;
+    left: 5px;
+    top: 5px;
+    padding: 4px 4px;
+    background-color: rgba(33, 33, 33, 0.37);
+   border-radius: 5px;
+}
+
+.heart__icon_content1 {
+   display: block;
+    position: absolute;
+    width: 30px;
+    height: 28px;
+    left: 17px;
+    top: 17px;
+    padding: 5px 3px;
+    background-color: rgba(33, 33, 33, 0.37);
+   border-radius: 5px;
+   z-index: 3;
+   cursor: pointer;
+   stroke: white;
+   stroke-width: 3px;
+   fill: transparent;
+}
+
+
+.heart__icon_content_about {
+    display: block;
+/*    fill: #ffffff;*/
+    fill: white;
+    stroke: #DC143C;
+    stroke-width: 4px;
+    width: 30px;
+    height: 25px;
+    padding: 3px 3px;
+/*    background-color: rgba(78, 76, 76, 0.62);*/
+
+}
+
+.home__town {
+   margin-right: 5px;
+}
+
+.location__icon_content {
+    fill: black;
+    width: 20px;
+    height: 20px;
+    padding: 0px 2px;
+}
+
+.sofa__icon {
+    fill: #7e7e7e;
+    width: 16px;
+    height: 16px;
+    padding: 2px 2px;
+}
+
+.icon__room {
+   fill: #7e7e7e;
+    width: 18px;
+    height: 18px;
+    padding: 0px 2px;
+}
+
+.heart__icon_content:hover {
+    fill: yellow;
+    cursor: pointer;
+}
+
+.heart__icon_content1:hover {
+/*    fill: rgba(179, 244, 5, 0.44);*/
+   stroke: #b3f405;
+}
+
+
+.car_maker-model {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    margin: 0 0px;
+    padding: 2px 10px;
+    font-size: 15px;
+    font-weight: 600;
+    color: black;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.car_details {
+    display: flex;
+    align-items: center;
+    padding: 2px 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    color: grey;
+    text-decoration: none;
+    font-size: 14px;
+/*    margin-bottom: 2px;*/
+}
+
+.car_elan_date {
+    display: flex;
+    align-items: center;
+    padding: 2px 10px 4px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    color: grey;
+    text-decoration: none;
+    font-size: 14px;
+/*    margin-bottom: 2px;*/
+}
+
+.home_detail {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    margin-right: 5px;
+}
+
+.ads_date {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    padding: 2px 5px;
+    color: grey;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-decoration: none;
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 530px) {
+   .heart__icon_content1 {
+      left: 12px;
+    top: 12px;
+   }
+}
