--- a/css/style.css
+++ b/css/style.css
@@ -1629,7 +1629,7 @@ f
     width: 50%;
 }
    .board {
-      margin: 5px;
+      margin: 5px 2px;
    }
    
    .homes__ads__main__inner,
@@ -1671,7 +1671,7 @@ f
 .home_photo_text {
     position: absolute;
     right: 0px;
-    top: 5px;
+    top: 0px;
 /*    font-family: 'Roboto', sans-serif;*/
     font-size: 14px;
     color: #ffffff;
@@ -1701,12 +1701,12 @@ f
 .home_photo_text_agent {
    position: absolute;
     left: 0px;
-    bottom: 5px;
+    bottom: 3px;
     font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     color: #ffffff;
     font-weight: 400;
-    padding: 3px 5px;
+    padding: 1px 5px;
 /*    background-color: #d89e00;*/
     background-color: #017dc0;
    border-radius: 0px 5px 5px 0px;
@@ -1716,14 +1716,14 @@ f
    display: flex;
    position: absolute;
    right: 3px;
-   bottom: 5px;
+   bottom: 3px;
 }
 
 .premium__icon_content {
     display: block;
     fill: #ff9c82;
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     padding: 3px 3px;
     background-color: rgba(1, 70, 86, 0.86);
 margin-left: 2px;
@@ -1734,8 +1734,8 @@ margin-left: 2px;
     display: block;
    
     fill: #ffd102;
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     padding: 3px 3px;
     background-color: rgba(1, 70, 86, 0.86);
    margin-left: 2px;
@@ -1745,8 +1745,8 @@ margin-left: 2px;
 .home_extra__icons {
    display: flex;
    position: absolute;
-   right: 0px;
-   top: 26px;
+   right: 3px;
+   top: 21px;
 }
 
 .document__icon_content {
@@ -1791,8 +1791,8 @@ margin-left: 2px;
     position: absolute;
     width: 30px;
     height: 28px;
-    left: 17px;
-    top: 17px;
+    left: 14px;
+    top: 12px;
     padding: 5px 3px;
     background-color: rgba(33, 33, 33, 0.37);
    border-radius: 5px;
