--- a/css/style.css
+++ b/css/style.css
@@ -2258,7 +2258,8 @@ margin-left: 2px;
    margin-top: auto;
 /*    background-color: #1e1e1e;*/
 /*   background-color: #291303;*/
-   background-color: #01183c;
+/*   background-color: #01183c;*/
+   background-color: #023e7d;
 }
 .footer__top {
    border-bottom: 1px solid grey;
