--- a/css/style.css
+++ b/css/style.css
@@ -602,16 +602,28 @@ legend {
    font-size: 16px;
    font-weight: 700;
    transition: all 0.3s ease 0s;
+   padding: 10px 0px;
 }
 
 .header__navigation-link._active {
-   border-bottom: 2px dotted #a76700;
+/*   border-bottom: 2px dotted #a76700;*/
    color: #ff9d00;
 }
 
 .header__navigation-link:hover {
-   border-bottom: 2px dotted #a76700;
+/*   border-bottom: 2px dotted #a76700;*/
    color: #ff9d00;
+}
+
+.dropli_link {
+   position: relative;
+   cursor: pointer;  
+}
+
+.icon_arrow_next {
+   width: 10px;
+   height: 10px;
+   margin: 0px 3px;
 }
 
 .right__location-country {
@@ -631,6 +643,147 @@ legend {
        font-size: 14px;
    }
 }
+
+@media (min-width: 800px) {
+   
+   .sub__navigation-list {
+   position: absolute;
+   z-index: 100;
+   top: 150%;
+/*   bottom: 0px;*/
+   left: -50%;
+   padding: 15px 15px 10px 15px;
+   color: white;
+   background-color: #02408a;
+   font-size: 16px;
+   font-weight: 500;
+   width: 200px;
+   visibility: hidden;
+   opacity: 0;
+   transition: all 0.3s ease 0s;
+/*   margin-top: 10px;*/
+   border-radius: 10px;
+   box-shadow: 0 8px 12px 0 rgb(42 52 61 / 16%);   
+}
+   
+   .dropli_link:hover .sub__navigation-list {
+   top: 100%;
+   visibility: visible;
+   opacity: 1;
+}
+}
+
+
+@media (ma-width: 800px) {
+.header__navigation-link {
+      padding: 0px 0px;
+   }
+}
+
+
+.sub__navigation-link {
+   cursor: pointer;
+   margin-bottom: 9px;
+   padding-bottom: 9px;
+   display: inline-block;
+   font-size: 18px;
+/*      padding-bottom: 7px;*/
+      display: inline-block;
+   font-weight: 500;
+   padding-left: 10px;
+   width: 100%;
+   font-size: 16px;
+   color: white;
+}
+
+.sub__navigation-link:hover {
+   color: yellow;
+}
+
+.sub_link {
+   border-bottom: 1px dotted white;
+}
+
+@media (min-width: 800px) {
+   .navigation-link__back {
+      display: none;
+   }
+}
+
+@media (max-width: 800px) {
+   
+   .icon_arrow_next {
+      transform: rotate(-90deg);
+      width: 12px;
+   height: 12px;
+   margin: 0px 5px;
+   }
+   
+   .sub__navigation-list {
+      display: flex;
+    flex-direction: column;
+    position: fixed;
+   right: -100%;   
+    top: 40px;
+    width: 40%;
+    height: 100%;
+    overflow: auto;
+   background-color: #02408a; 
+/*    padding-top: 50px;*/
+    padding: 15px 10px 20px 10px;
+    visibility: visible;
+   opacity: 1;
+   transition: all 0.7s ease 0s;
+   z-index: 150;   
+   }
+   
+   .sub__navigation-list1.active {
+        right: 0%;
+/*      right: -100%*/
+    }
+   
+   .navigation-link__dropli._active ~ .sub__navigation-list {
+    right: 0%;
+    
+   }
+   
+   .menu__arrow_back {
+      
+   }
+   
+   .sub__navigation-link {
+      margin-bottom: 0px;
+   }
+   
+   .navigation-link__back {
+      color: yellow;
+      font-weight: 700;
+      font-size: 18px;
+      width: 100%;
+      
+   }
+   
+   .navigation-link__back::after {
+      content: '';
+      border-bottom: 2px dotted white;
+      width: 100%;
+      height: 2px;
+/*      background-color: white;*/
+      display: block;
+      padding-top: 5px;
+      padding-bottom: 10px;
+   }
+   
+   .icon_arrow_back {
+      transform: rotate(180deg);
+      width: 15px;
+   height: 15px;
+   margin: 0px 5px;
+   }
+     
+}
+
+
 
 @media (max-width:850px) {
    
@@ -682,7 +835,7 @@ legend {
 
    .header__navigation-link {
       font-size: 18px;
-      margin-bottom: 30px;
+/*      margin-bottom: 30px;*/
       color: white;
    }  
    
@@ -858,7 +1011,29 @@ legend {
 }
 }
 
+@media (max-width: 700px) {
+      .sub__navigation-list {
+         width: 50%;
+      }
+   } 
+   
+   @media (max-width: 560px) {
+      .sub__navigation-list {
+         width: 60%;
+      }
+   } 
+   
+   @media (max-width: 440px) {
+      .sub__navigation-list {
+         width: 70%;
+      }
+   }
 
+@media (max-width: 390px) {
+      .sub__navigation-list {
+         width: 100%;
+      }
+   }
 
 /* Realty filtr styles */
 
@@ -1003,6 +1178,7 @@ legend {
 
 .filtr__btn:hover {
    background-color: #004da8;
+   box-shadow: 0 8px 12px 0 rgb(42 52 61 / 16%);
 }
 
 .filtr__btn1 {
