--- a/css/style.css
+++ b/css/style.css
@@ -617,7 +617,8 @@ legend {
 
 .dropli_link {
    position: relative;
-   cursor: pointer;  
+   cursor: pointer; 
+/*   width: auto;*/
 }
 
 .icon_arrow_next {
@@ -671,6 +672,8 @@ legend {
    visibility: visible;
    opacity: 1;
 }
+   
+   
 }
 
 
@@ -680,6 +683,10 @@ legend {
    }
 }
 
+.dropli_link {
+/*      min-width: 90%;*/
+   width: 90%;
+   }
 
 .sub__navigation-link {
    cursor: pointer;
@@ -701,7 +708,7 @@ legend {
 }
 
 .sub_link {
-   border-bottom: 1px dotted white;
+   border-bottom: 1px dotted rgba(0, 173, 249, 0.72);
 }
 
 @media (min-width: 800px) {
@@ -712,11 +719,19 @@ legend {
 
 @media (max-width: 800px) {
    
+   .dropli_link-icon {
+/*      border: 1px solid white;*/
+      border-radius: 50%;
+/*      padding: 1px;*/
+      background-color: #004da8;
+   }
+   
    .icon_arrow_next {
-      transform: rotate(-90deg);
-      width: 12px;
+   transform: rotate(-90deg);
+   width: 12px;
    height: 12px;
    margin: 0px 5px;
+    
    }
    
    .sub__navigation-list {
@@ -741,6 +756,14 @@ legend {
         right: 0%;
 /*      right: -100%*/
     }
+   
+   .navigation-link__dropli {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      min-width: 100%;
+      
+   }
    
    .navigation-link__dropli._active ~ .sub__navigation-list {
     right: 0%;
@@ -825,7 +848,8 @@ legend {
     width: 40%;
     height: 100%;
     overflow: auto;
-   background-color: #004da8;
+/*   background-color: #004da8;*/
+   background-color: #02408a;
     transition: all 0.7s ease 0s;
     padding-top: 50px;
     padding: 15px 10px 20px 10px;
