--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
     padding: 0;
     margin: 0;
     border: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; 
+   -webkit-tap-highlight-color: transparent;
 }
 
 a,
