--- a/css/style.css
+++ b/css/style.css
@@ -2454,6 +2454,182 @@ margin-left: 2px;
 }
 
 
+/* Search modal styles */
+
+.filtr__section_modal-header {
+   text-align: center;
+   font-size: 24px;
+   font-weight: 700;
+   margin-top: 20px;
+   
+}
+
+.filtr__section_modal {
+   justify-content: center;
+    align-items: center;
+   margin: 20px auto 20px;
+   max-width: 1050px;
+   width: 98%;
+/*    background: rgba(41, 20, 4, 0.71);*/
+    background: rgba(2, 64, 138, 0.94);
+    background: #02408a;
+   border-radius: 10px;
+   padding: 10px 0px;
+}
+
+.filtr-inner__modal {
+   display: flex;
+  flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 10px 0px;
+   margin: 0px 0px;
+   width: 100%;
+}
+
+.filtr__label_modal {
+    display: block;
+/*
+    width: 226px;
+   width: 25%;
+*/
+   flex: 1 1 20%;
+/*   width: 20%;*/
+   height: 54px;
+    position: relative;
+    border: 1px solid white;
+   background-color: white;
+   border-right: 1px solid grey;
+   margin-bottom: 10px;
+   cursor: pointer;
+}
+
+.filtr__label_modal1 {
+   display: block;
+/*
+    width: 226px;
+   width: 25%;
+*/
+   flex: 1 1 50%;
+/*   width: 20%;*/
+   height: 54px;
+    position: relative;
+    border: 1px solid white;
+   background-color: white;
+   border-right: 1px solid grey;
+   margin-bottom: 10px;
+   cursor: pointer;
+}
+
+@media (max-width: 500px) {
+   .filtr__label_modal1 {
+      flex: 1 1 100%;
+   }
+}
+
+@media (max-width: 750px) {
+   .filtr__label_modal {
+      flex: 1 1 33.333%;
+   }
+}
+
+
+@media (max-width: 550px) {
+   .filtr__label_modal {
+      flex: 1 1 50%;
+   }
+}
+
+
+.modal_item_checkbox {
+   margin: 25px 2px 0px 5px;
+}
+
+.modal_item_label {
+   margin: 0px 5px 0px -3px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.input_estate_code {
+   width: 90%;
+   height: 33px;
+   outline: none;
+   border: 1px dotted #b5b5b5;
+   border-radius: 5px;
+   padding: 0px 5px;
+}
+
+.modal_filtr__btn {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 45px;
+   margin: 5px 5px 5px;
+    
+   line-height: 0;
+   width: 140px;
+   text-decoration: none;
+   color: white;
+   font-weight: 700;
+   font-size: 20px;
+   border-radius: 5px;
+   transition: all 0.3s ease 0s;
+}
+
+.modal_filter_buttons {
+      display: flex;
+      flex-direction: row-reverse;
+   margin-bottom: 15px;
+   margin-top: 5px;
+      
+   }
+
+.modal_filtr__btn-red {
+   background-color: #00adf9;
+}
+
+
+.modal_filtr__btn-green {
+   background-color: #669300;
+   font-weight: 500;
+   font-size: 16px;
+}
+
+.modal_filtr__btn-red:hover {
+   background-color: #ef4000;
+}
+
+.modal_filtr__btn-green:hover {
+   background-color: #5b8300;
+   color: yellow;
+}
+
+.checkbox_search-modal {
+   padding: 0px 10px;
+   color: white;
+}
+
+
+@media (max-width: 900px) {
+   
+   
+   .modal_filtr__btn {
+      height: 45px;
+      margin: 5px 5px 5px;
+   }
+   
+
+}
+
+@media (max-width: 420px) {
+   .modal_filtr__btn {
+      height: 40px;
+      width: 110px;
+   }
+   
+}
+
 /*  Footer Styles */
 
 .footer {
