--- a/css/style.css
+++ b/css/style.css
@@ -3748,9 +3748,13 @@ margin-left: 2px;
 }
 
 @media (max-width: 380px) {
+   .ads_delate_input {
+      max-width: 180px;
+   }
+   
    .ads_delate_btn {
-      font-size: 12px;
-      padding: 10px 5px;
+      font-size: 14px;
+      padding: 10px 10px;
    }
 }
 
@@ -3798,7 +3802,7 @@ margin-left: 2px;
 }
 
 .car_about_share_link {
-   margin: 0 5px;
+   margin: 0 10px;
     text-decoration: none;
 }
 
