--- a/css/style.css
+++ b/css/style.css
@@ -3391,7 +3391,7 @@ display: none;
    align-items: center;
    margin-bottom: 10px;
    border-bottom: 1px dashed grey;
-   padding: 10px 0px;
+   padding: 0px 0px 10px;
 }
 .dealer_table-logo {
    flex: 0 0 25%;
@@ -3538,7 +3538,7 @@ display: none;
    border-radius: 10px;
    display: block;
    text-align: center;
-   margin: 30px 20px 10px;
+   margin: 20px 20px 10px;
    font-size: 20px;
    font-weight: 700;
    transition: all 0.3s ease 0s;
