car salon css upd

--- a/css/style.css
+++ b/css/style.css
@@ -3380,8 +3380,10 @@ display: none;
 
 .car_dealer_table {
    border: 1px dotted grey;
-   border-radius: 5px;
+   border-radius: 10px;
    margin: 20px 0px;
+   background-color: #fcfcfc;
+   box-shadow: 0 17px 34px 0 rgb(44 39 56 / 4%), 0 8px 17px 0 rgb(44 39 56 / 2%);
 }
 .dealer_table-body {
    padding: 10px;
