--- a/css/style.css
+++ b/css/style.css
@@ -4181,6 +4181,298 @@ padding: 5px 10px;
 }
 }
 
+/*  number check styles */
+
+.number_check_body {
+    margin: 20px auto 40px;
+    padding: 15px 10px 20px;
+    position: relative;
+    max-width: 600px;
+    width: 98%;
+    background-color: #1067bf;
+/*    background-color: #82af7b;*/
+/*    background-color: #004da8;*/
+    border-radius: 9px;
+}
+
+.number_check_h1 {
+    text-align: center;
+color: #ffe455;
+    margin-bottom: 5px;
+    margin-top: 10px;
+    font-size: 26px;
+   font-weight: 700;
+
+}
+
+.number_check_h4 {
+   text-align: center;
+   color: #ffe455;
+    margin-bottom: 5px;
+    margin-top: 10px;
+    font-size: 22px;
+   font-weight: 500;
+}
+
+
+.number_check_h2 {
+    margin-top: 0px;
+    color: white;
+    margin: 0 5px 15px;
+    text-align: center;
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.number_check_h3 {
+    font-family: 'Roboto Condensed', sans-serif;
+    color: white;
+    margin: 20px 10px 3px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.number_check_btn_body {
+    margin: 5px auto;
+}
+
+.number_check_btn {
+
+    display: block;
+/*    width: 40%;*/
+    padding: 9px 25px;
+    background-color: orange;
+    border: 1px solid orange;
+    margin: 0 auto;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+    border-radius: 7px;
+    font-size: 15px;
+    outline: none;
+
+}
+
+.next_sign {
+   font-size: 12px;
+}
+
+.number_check_btn:hover {
+    background-color: #f09b00;
+    outline: none;
+}
+
+
+.number_check_btn:active {
+border: 1px solid #e89600;
+box-shadow: 0px 2px 10px rgb(0, 91, 118) inset;
+outline: none;
+}
+
+.number_check_btn:disabled {
+    background-color: rgba(219, 219, 219, 0.79);
+    border: none;
+    color: rgba(128, 128, 128, 0.44);
+}
+
+
+
+
+.number_check_input {
+    display: block;
+    align-items: center;
+    align-content: center;
+    margin: 2px auto 20px;
+    text-align: center;
+    color: #6d6d6d;
+    border: 1px solid #e5e5e5;
+    padding: 10px;
+    border-radius: 5px;
+    outline: none;
+    font-size: 16px;
+   line-height: 20px;
+}
+
+.number_check_input:hover {
+    outline: none;
+    border: 1px solid #0094e2;
+/*    cursor: pointer;*/
+/*    background-color: #f7f7f7;*/
+
+}
+
+
+
+.number_check_input::placeholder {
+
+    color: #cbcbcb;
+
+}
+
+.elan_type__body {
+   display: flex;
+   margin: 0px auto 15px;
+   justify-content: center;
+   flex-wrap: wrap;
+}
+.elan_type__item {
+   padding: 5px 10px;
+   cursor: pointer;
+   color: white;
+   font-weight: 500;
+   font-size: 16px;
+   display: flex;
+   align-items: center;
+/*   flex: 0 0 33.333%;*/
+}
+.estate_type {
+   cursor: pointer;
+   width: 20px;
+   height: 20px;
+}
+.label_estate_type {
+   cursor: pointer;
+   padding: 3px;
+}
+
+.elan_param__body {
+   margin: 0 auto;
+   padding: 20px 10px;
+   border-top: 1px dashed white;
+   border-bottom: 1px dashed white;
+}
+
+.elan_param__add {
+   display: flex;
+    margin: 0px 0px 20px 0px;
+    align-content: center;
+   justify-content: center;
+   align-items: center;
+}
+
+.elan_label_add {
+   width: 170px;
+    margin: 0px 10px 0px 15px;
+    padding: 0px 5px;
+    0px;
+    color: white;
+    font-weight: 600;
+    /*    padding: 0px 50px 0px 0px;*/
+   font-size: 16px;
+}
+
+.elan_label_add::after {
+    content: "*";
+    color: yellow;
+   font-size: 20px;
+   padding: 0px 2px;
+}
+
+.select_add1 {
+   margin: 0px 10px 0px 10px;
+    width: 270px;
+    border: 1px solid #a8a8a8;
+/*    width: 230px;*/
+    font-family: 'Roboto', sans-serif;
+/*    font-size: 18px;*/
+    color: #777;
+    font-size: 14px;
+/*    padding: 5px 0px;*/
+    padding: 9px 5px 9px 5px;
+    background-color: white;
+    border-radius: 4px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+.select_add1:hover {
+    border: 1px solid #005d8e;
+        background-color: #f7f7f7;
+/*    box-shadow: 0 0 5px 3px rgba(0, 149, 185, 0.52); */
+}
+
+.select_add1:focus {
+    border: 1px solid #005d8e;
+    outline: none;
+    background-color: #f7f7f7;
+/*    outline-style: dashed;*/
+    box-shadow: 0px 0px 1px 1px rgba(0, 149, 185, 0.52);
+}
+
+.elan_param__main {
+   display: flex;
+   padding: 10px 0px;
+   justify-content: center;
+   flex-wrap: wrap;
+}
+.elan_param__column {
+   
+   flex: 1 1 25%;
+   padding: 7px;
+}
+
+.elan_param__item {
+   border: 1px dashed white;
+   border-radius: 10px;
+   padding: 10px 10px 20px;
+   text-align: center;
+   color: white;
+   cursor: pointer;
+   transition: all 0.5s ease 0s;
+}
+
+.param__item_icon {
+}
+.icon {
+}
+.icon_new_param {
+    fill: currentColor;
+   width: 50px;
+   height: 50px;
+   margin: 0px 5px;
+/*   margin-bottom: -2px;*/
+}
+
+.param__item_title {
+}
+
+.elan_param__item:hover {
+   color: yellow;
+   border: 1px dashed yellow;
+}
+
+@media (max-width: 650px) {
+  
+   .elan_param__column {
+   flex: 1 1 50%;
+   padding: 7px;
+}
+}
+
+@media (max-width: 400px) {
+   .elan_param__column {
+   flex: 1 1 100%;
+   padding: 7px;
+}
+}
+
+
+@media (max-width: 430px) {
+   .elan_param__add {
+      flex-wrap: wrap;
+   }
+   
+   .elan_label_add {
+      width: 270px;
+   }
+}
+
+
+
 /*  Footer Styles */
 
 .footer {
