--- a/css/style.css
+++ b/css/style.css
@@ -4212,6 +4212,7 @@ color: #ffe455;
     margin-top: 10px;
     font-size: 22px;
    font-weight: 500;
+   position: relative;
 }
 
 
@@ -4405,7 +4406,7 @@ outline: none;
 
 .elan_param__main {
    display: flex;
-   padding: 10px 0px;
+   padding: 10px 0px 0px;
    justify-content: center;
    flex-wrap: wrap;
 }
@@ -4445,6 +4446,35 @@ outline: none;
    border: 1px dashed yellow;
 }
 
+.elan_ticari-subparam {
+   margin: 10px auto 0px;
+   width: 100%;
+   height: 0;
+    opacity: 0;
+    overflow: hidden;
+    will-change: max-height;
+    transition: all 0.4s ease-out;
+}
+
+.elan_ticari-subparam.open {
+   opacity: 1;
+   height: 170px;
+   width: 100%;
+}
+
+.h4_line1 {
+   
+}
+
+.h4_line1::before {
+   content: "";
+   min-width: 300px;
+   min-height: 3px;
+   background-color: yellow;
+   position: absolute;
+   top: -10px;
+}
+
 @media (max-width: 650px) {
   
    .elan_param__column {
@@ -4453,15 +4483,21 @@ outline: none;
 }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
+     .elan_param__body {
+      padding: 10px 0px;
+   }
+   .elan_param__item {
+      padding: 5px 10px 10px;
+   }
    .elan_param__column {
-   flex: 1 1 100%;
-   padding: 7px;
+   padding: 5px;
 }
 }
 
 
 @media (max-width: 430px) {
+ 
    .elan_param__add {
       flex-wrap: wrap;
    }
